<resources>
    <string name="app_name">MyAnimeList</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anime_list">Anime List</string>
    <string name="detail">Detail</string>
    <string name="characters">Characters</string>
    <string name="reviews">Reviews</string>
    <string name="anime_title">Anime Title</string>
    <string name="score_0_0">Score: 0.0</string>
    <string name="type_tv">Type: TV</string>
    <string name="score">Score:</string>
    <string name="type">Type:</string>
    <string name="episodes">Episodes:</string>
    <string name="anime_description">Anime Description:</string>
    <string name="description">description</string>
    <string name="characters_">Characters...</string>
    <string name="rank">Rank:</string>
    <string name="manga_list">Manga List</string>
    <string name="chapters">Chapters:</string>
</resources>