<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/animeListFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_list"
        android:title="@string/anime_list" />

    <item
        android:id="@+id/charactersFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_characters"
        android:title="@string/characters"
        />

    <item
        android:id="@+id/mangaListFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/manga_list"
        android:icon="@drawable/ic_detail"
        />

    <item
        android:id="@+id/reviewsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_characters"
        android:title="@string/characters" />

</menu>